--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "bitcoinjs-lib": "git+https://github.com/bitcoinjs/bitcoinjs-lib.git",
     "merkle-bitcoin": "git+https://github.com/boolpath/merkle-bitcoin.git",
     "promise": "*",
-    "sha3": "git+https://github.com/phusion/node-sha3.git"
+    "sha3": "^2.1.4",
   },
   "deprecated": false,
   "description": "High performance Stratum poolserver in Node.js",
